Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/OverrideChecks/6400189/T6400189a.out
T6400189a.java:14:35: compiler.warn.unchecked.call.mbr.of.raw.type: <T>getAnnotation(java.lang.Class<T>), java.lang.reflect.Constructor
T6400189a.java:14:35: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: java.lang.annotation.Annotation, java.lang.annotation.Documented)
1 error
1 warning
